@@ -41,8 +41,6 @@ import org.junit.jupiter.params.provider.ValueSource;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.OptionalInt;
@@ -68,8 +66,8 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(3, 1);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(snapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("d", "e", "f"))
+            .appendToLog(snapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(snapshotId.epoch(), List.of("d", "e", "f"))
             .withEmptySnapshot(snapshotId)
             .withElectedLeader(epoch, leaderId)
             .build();
@@ -86,8 +84,8 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(3, 1);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(snapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("d", "e", "f"))
+            .appendToLog(snapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(snapshotId.epoch(), List.of("d", "e", "f"))
             .withElectedLeader(epoch, leaderId)
             .build();
 
@@ -104,8 +102,8 @@ public final class KafkaRaftClientSnapshotTest {
 
         RaftClientTestContext.Builder contextBuilder = new RaftClientTestContext.Builder(localId, voters)
             .withKip853Rpc(withKip853Rpc)
-            .appendToLog(snapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("d", "e", "f"))
+            .appendToLog(snapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(snapshotId.epoch(), List.of("d", "e", "f"))
             .withEmptySnapshot(snapshotId);
 
         if (!entireLog) {
@@ -127,7 +125,7 @@ public final class KafkaRaftClientSnapshotTest {
         // Check that listener was notified of the new snapshot
         try (SnapshotReader<String> snapshot = context.listener.drainHandledSnapshot().get()) {
             assertEquals(snapshotId, snapshot.snapshotId());
-            SnapshotWriterReaderTest.assertDataSnapshot(Collections.emptyList(), snapshot);
+            SnapshotWriterReaderTest.assertDataSnapshot(List.of(), snapshot);
         }
     }
 
@@ -141,8 +139,8 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(3, 1);
 
         RaftClientTestContext.Builder contextBuilder = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(snapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("d", "e", "f"))
+            .appendToLog(snapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(snapshotId.epoch(), List.of("d", "e", "f"))
             .withEmptySnapshot(snapshotId)
             .withElectedLeader(epoch, leaderId);
 
@@ -169,7 +167,7 @@ public final class KafkaRaftClientSnapshotTest {
         // Check that listener was notified of the new snapshot
         try (SnapshotReader<String> snapshot = context.listener.drainHandledSnapshot().get()) {
             assertEquals(snapshotId, snapshot.snapshotId());
-            SnapshotWriterReaderTest.assertDataSnapshot(Collections.emptyList(), snapshot);
+            SnapshotWriterReaderTest.assertDataSnapshot(List.of(), snapshot);
         }
     }
 
@@ -183,8 +181,8 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(3, 1);
 
         RaftClientTestContext.Builder contextBuilder = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(snapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("d", "e", "f"))
+            .appendToLog(snapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(snapshotId.epoch(), List.of("d", "e", "f"))
             .withEmptySnapshot(snapshotId)
             .withElectedLeader(epoch, leaderId);
 
@@ -215,7 +213,7 @@ public final class KafkaRaftClientSnapshotTest {
         // Check that the second listener was notified of the new snapshot
         try (SnapshotReader<String> snapshot = secondListener.drainHandledSnapshot().get()) {
             assertEquals(snapshotId, snapshot.snapshotId());
-            SnapshotWriterReaderTest.assertDataSnapshot(Collections.emptyList(), snapshot);
+            SnapshotWriterReaderTest.assertDataSnapshot(List.of(), snapshot);
         }
     }
 
@@ -229,9 +227,9 @@ public final class KafkaRaftClientSnapshotTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withKip853Rpc(withKip853Rpc)
-            .appendToLog(snapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("d", "e", "f"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("g", "h", "i"))
+            .appendToLog(snapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(snapshotId.epoch(), List.of("d", "e", "f"))
+            .appendToLog(snapshotId.epoch(), List.of("g", "h", "i"))
             .withEmptySnapshot(snapshotId)
             .deleteBeforeSnapshot(snapshotId)
             .build();
@@ -252,7 +250,7 @@ public final class KafkaRaftClientSnapshotTest {
         // Check that listener was notified of the new snapshot
         try (SnapshotReader<String> snapshot = context.listener.drainHandledSnapshot().get()) {
             assertEquals(snapshotId, snapshot.snapshotId());
-            SnapshotWriterReaderTest.assertDataSnapshot(Collections.emptyList(), snapshot);
+            SnapshotWriterReaderTest.assertDataSnapshot(List.of(), snapshot);
         }
 
         // Generate a new snapshot
@@ -271,7 +269,7 @@ public final class KafkaRaftClientSnapshotTest {
         // Check that listener was notified of the second snapshot
         try (SnapshotReader<String> snapshot = context.listener.drainHandledSnapshot().get()) {
             assertEquals(secondSnapshotId, snapshot.snapshotId());
-            SnapshotWriterReaderTest.assertDataSnapshot(Collections.emptyList(), snapshot);
+            SnapshotWriterReaderTest.assertDataSnapshot(List.of(), snapshot);
         }
     }
 
@@ -286,9 +284,9 @@ public final class KafkaRaftClientSnapshotTest {
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withUnknownLeader(snapshotId.epoch())
             .withKip853Rpc(withKip853Rpc)
-            .appendToLog(snapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("d", "e", "f"))
-            .appendToLog(snapshotId.epoch(), Arrays.asList("g", "h", "i"))
+            .appendToLog(snapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(snapshotId.epoch(), List.of("d", "e", "f"))
+            .appendToLog(snapshotId.epoch(), List.of("g", "h", "i"))
             .withEmptySnapshot(snapshotId)
             .deleteBeforeSnapshot(snapshotId)
             .build();
@@ -324,7 +322,7 @@ public final class KafkaRaftClientSnapshotTest {
         context.unattachedToLeader();
         int epoch = context.currentEpoch();
 
-        List<String> appendRecords = Arrays.asList("a", "b", "c");
+        List<String> appendRecords = List.of("a", "b", "c");
         context.client.prepareAppend(epoch, appendRecords);
         context.client.schedulePreparedAppend();
         context.time.sleep(context.appendLingerMs());
@@ -374,7 +372,7 @@ public final class KafkaRaftClientSnapshotTest {
         context.unattachedToLeader();
         int epoch = context.currentEpoch();
 
-        List<String> appendRecords = Arrays.asList("a", "b", "c");
+        List<String> appendRecords = List.of("a", "b", "c");
         context.client.prepareAppend(epoch, appendRecords);
         context.client.schedulePreparedAppend();
         context.time.sleep(context.appendLingerMs());
@@ -417,8 +415,8 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch oldestSnapshotId = new OffsetAndEpoch(3, 2);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("d", "e", "f"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("d", "e", "f"))
             .withAppendLingerMs(1)
             .withKip853Rpc(withKip853Rpc)
             .build();
@@ -437,7 +435,7 @@ public final class KafkaRaftClientSnapshotTest {
         }
         context.client.poll();
 
-        context.client.prepareAppend(epoch, Arrays.asList("g", "h", "i"));
+        context.client.prepareAppend(epoch, List.of("g", "h", "i"));
         context.client.schedulePreparedAppend();
         context.time.sleep(context.appendLingerMs());
         context.client.poll();
@@ -459,8 +457,8 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch oldestSnapshotId = new OffsetAndEpoch(3, 2);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(oldestSnapshotId.epoch() + 2, Arrays.asList("d", "e", "f"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(oldestSnapshotId.epoch() + 2, List.of("d", "e", "f"))
             .withAppendLingerMs(1)
             .withKip853Rpc(withKip853Rpc)
             .build();
@@ -509,9 +507,9 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch oldestSnapshotId = new OffsetAndEpoch(3, 2);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("d", "e", "f"))
-            .appendToLog(oldestSnapshotId.epoch() + 2, Arrays.asList("g", "h", "i"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("d", "e", "f"))
+            .appendToLog(oldestSnapshotId.epoch() + 2, List.of("g", "h", "i"))
             .withAppendLingerMs(1)
             .withKip853Rpc(withKip853Rpc)
             .build();
@@ -555,9 +553,9 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch oldestSnapshotId = new OffsetAndEpoch(3, 2);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("d", "e", "f"))
-            .appendToLog(oldestSnapshotId.epoch() + 2, Arrays.asList("g", "h", "i"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("d", "e", "f"))
+            .appendToLog(oldestSnapshotId.epoch() + 2, List.of("g", "h", "i"))
             .withAppendLingerMs(1)
             .withKip853Rpc(withKip853Rpc)
             .build();
@@ -609,9 +607,9 @@ public final class KafkaRaftClientSnapshotTest {
         OffsetAndEpoch oldestSnapshotId = new OffsetAndEpoch(3, 2);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("a", "b", "c"))
-            .appendToLog(oldestSnapshotId.epoch(), Arrays.asList("d", "e", "f"))
-            .appendToLog(oldestSnapshotId.epoch() + 2, Arrays.asList("g", "h", "i"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("a", "b", "c"))
+            .appendToLog(oldestSnapshotId.epoch(), List.of("d", "e", "f"))
+            .appendToLog(oldestSnapshotId.epoch() + 2, List.of("g", "h", "i"))
             .withAppendLingerMs(1)
             .withKip853Rpc(withKip853Rpc)
             .build();
@@ -749,10 +747,10 @@ public final class KafkaRaftClientSnapshotTest {
         int localId = randomReplicaId();
         Set<Integer> voters = Set.of(localId, localId + 1);
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(1, 1);
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(snapshotId.epoch(), Collections.singletonList("a"))
+            .appendToLog(snapshotId.epoch(), List.of("a"))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
@@ -805,10 +803,10 @@ public final class KafkaRaftClientSnapshotTest {
         ReplicaKey observer3 = replicaKey(localId + 3, withKip853Rpc);
         Set<Integer> voters = Set.of(localId, voter1.id(), voter2.id());
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(1, 1);
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-                .appendToLog(snapshotId.epoch(), Collections.singletonList("a"))
+                .appendToLog(snapshotId.epoch(), List.of("a"))
                 .withKip853Rpc(withKip853Rpc)
                 .build();
 
@@ -895,7 +893,7 @@ public final class KafkaRaftClientSnapshotTest {
         int localId = randomReplicaId();
         Set<Integer> voters = Set.of(localId, localId + 1);
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(2, 1);
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .appendToLog(snapshotId.epoch(), records)
@@ -1008,10 +1006,10 @@ public final class KafkaRaftClientSnapshotTest {
         int localId = randomReplicaId();
         Set<Integer> voters = Set.of(localId, localId + 1);
         OffsetAndEpoch snapshotId = new OffsetAndEpoch(1, 1);
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(snapshotId.epoch(), Collections.singletonList("a"))
+            .appendToLog(snapshotId.epoch(), List.of("a"))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
@@ -1227,7 +1225,7 @@ public final class KafkaRaftClientSnapshotTest {
         assertEquals(snapshotId.epoch(), request.snapshotId().epoch());
         assertEquals(0, request.position());
 
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
         MemorySnapshotWriter memorySnapshot = new MemorySnapshotWriter(snapshotId);
         try (SnapshotWriter<String> snapshotWriter = snapshotWriter(context, memorySnapshot)) {
             snapshotWriter.append(records);
@@ -1255,12 +1253,12 @@ public final class KafkaRaftClientSnapshotTest {
         // Check that the snapshot was written to the log
         RawSnapshotReader snapshot = context.log.readSnapshot(snapshotId).get();
         assertEquals(memorySnapshot.buffer().remaining(), snapshot.sizeInBytes());
-        SnapshotWriterReaderTest.assertDataSnapshot(Collections.singletonList(records), snapshot);
+        SnapshotWriterReaderTest.assertDataSnapshot(List.of(records), snapshot);
 
         // Check that listener was notified of the new snapshot
         try (SnapshotReader<String> reader = context.listener.drainHandledSnapshot().get()) {
             assertEquals(snapshotId, reader.snapshotId());
-            SnapshotWriterReaderTest.assertDataSnapshot(Collections.singletonList(records), reader);
+            SnapshotWriterReaderTest.assertDataSnapshot(List.of(records), reader);
         }
     }
 
@@ -1300,7 +1298,7 @@ public final class KafkaRaftClientSnapshotTest {
         assertEquals(snapshotId.epoch(), request.snapshotId().epoch());
         assertEquals(0, request.position());
 
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
         MemorySnapshotWriter memorySnapshot = new MemorySnapshotWriter(snapshotId);
         try (SnapshotWriter<String> snapshotWriter = snapshotWriter(context, memorySnapshot)) {
             snapshotWriter.append(records);
@@ -1360,12 +1358,12 @@ public final class KafkaRaftClientSnapshotTest {
         // Check that the snapshot was written to the log
         RawSnapshotReader snapshot = context.log.readSnapshot(snapshotId).get();
         assertEquals(memorySnapshot.buffer().remaining(), snapshot.sizeInBytes());
-        SnapshotWriterReaderTest.assertDataSnapshot(Collections.singletonList(records), snapshot);
+        SnapshotWriterReaderTest.assertDataSnapshot(List.of(records), snapshot);
 
         // Check that listener was notified of the new snapshot
         try (SnapshotReader<String> reader = context.listener.drainHandledSnapshot().get()) {
             assertEquals(snapshotId, reader.snapshotId());
-            SnapshotWriterReaderTest.assertDataSnapshot(Collections.singletonList(records), reader);
+            SnapshotWriterReaderTest.assertDataSnapshot(List.of(records), reader);
         }
     }
 
@@ -1900,7 +1898,7 @@ public final class KafkaRaftClientSnapshotTest {
         Set<Integer> voters = Set.of(localId, otherNodeId);
         int epoch = 2;
 
-        List<String> appendRecords = Arrays.asList("a", "b", "c");
+        List<String> appendRecords = List.of("a", "b", "c");
         OffsetAndEpoch invalidSnapshotId1 = new OffsetAndEpoch(4, epoch);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
@@ -1920,14 +1918,14 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId1, 0)
         );
         assertEquals(
-            "Cannot create a snapshot with an id (OffsetAndEpoch(offset=4, epoch=2)) greater than the high-watermark (0)",
+            "Cannot create a snapshot with an id (OffsetAndEpoch[offset=4, epoch=2]) greater than the high-watermark (0)",
             exception.getMessage()
         );
 
         // 1.2 high watermark must larger than or equal to the snapshotId's endOffset
         context.advanceLocalLeaderHighWatermarkToLogEndOffset();
         // append some more records to make the LEO > high watermark
-        List<String> newRecords = Arrays.asList("d", "e", "f");
+        List<String> newRecords = List.of("d", "e", "f");
         context.client.prepareAppend(currentEpoch, newRecords);
         context.client.schedulePreparedAppend();
         context.time.sleep(context.appendLingerMs());
@@ -1940,7 +1938,7 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId2, 0)
         );
         assertEquals(
-            "Cannot create a snapshot with an id (OffsetAndEpoch(offset=7, epoch=3)) greater than the high-watermark (4)",
+            "Cannot create a snapshot with an id (OffsetAndEpoch[offset=7, epoch=3]) greater than the high-watermark (4)",
             exception.getMessage()
         );
 
@@ -1951,7 +1949,7 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId3, 0)
         );
         assertEquals(
-            "Snapshot id (OffsetAndEpoch(offset=4, epoch=4)) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch(offset=7, epoch=3))",
+            "Snapshot id (OffsetAndEpoch[offset=4, epoch=4]) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch[offset=7, epoch=3])",
             exception.getMessage()
         );
 
@@ -1964,7 +1962,7 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId4, 0)
         );
         assertEquals(
-            "Snapshot id (OffsetAndEpoch(offset=4, epoch=2)) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch(offset=3, epoch=2))",
+            "Snapshot id (OffsetAndEpoch[offset=4, epoch=2]) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch[offset=3, epoch=2])",
             exception.getMessage()
         );
 
@@ -2007,7 +2005,7 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId1, 0)
         );
         assertEquals(
-            "Cannot create a snapshot with an id (OffsetAndEpoch(offset=1, epoch=1)) greater than the high-watermark (0)",
+            "Cannot create a snapshot with an id (OffsetAndEpoch[offset=1, epoch=1]) greater than the high-watermark (0)",
             exception.getMessage()
         );
 
@@ -2018,7 +2016,7 @@ public final class KafkaRaftClientSnapshotTest {
         context.assertFetchRequestData(fetchRequest, epoch, 1L, 1);
 
         // The response does not advance the high watermark
-        List<String> records1 = Arrays.asList("b", "c");
+        List<String> records1 = List.of("b", "c");
         MemoryRecords batch1 = context.buildBatch(1L, 3, records1);
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -2035,7 +2033,7 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId2, 0)
         );
         assertEquals(
-            "Cannot create a snapshot with an id (OffsetAndEpoch(offset=1, epoch=5)) greater than the high-watermark (0)",
+            "Cannot create a snapshot with an id (OffsetAndEpoch[offset=1, epoch=5]) greater than the high-watermark (0)",
             exception.getMessage()
         );
 
@@ -2045,7 +2043,7 @@ public final class KafkaRaftClientSnapshotTest {
         assertTrue(voters.contains(fetchRequest.destination().id()));
         context.assertFetchRequestData(fetchRequest, epoch, 3L, 3);
 
-        List<String> records2 = Arrays.asList("d", "e", "f");
+        List<String> records2 = List.of("d", "e", "f");
         int batch2Epoch = 4;
         MemoryRecords batch2 = context.buildBatch(3L, batch2Epoch, records2);
         context.deliverResponse(
@@ -2063,7 +2061,7 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId3, 0)
         );
         assertEquals(
-            "Snapshot id (OffsetAndEpoch(offset=6, epoch=6)) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch(offset=6, epoch=4))",
+            "Snapshot id (OffsetAndEpoch[offset=6, epoch=6]) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch[offset=6, epoch=4])",
             exception.getMessage()
         );
 
@@ -2076,7 +2074,7 @@ public final class KafkaRaftClientSnapshotTest {
             () -> context.client.createSnapshot(invalidSnapshotId4, 0)
         );
         assertEquals(
-            "Snapshot id (OffsetAndEpoch(offset=6, epoch=3)) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch(offset=3, epoch=3))",
+            "Snapshot id (OffsetAndEpoch[offset=6, epoch=3]) is not valid according to the log: ValidOffsetAndEpoch(kind=DIVERGING, offsetAndEpoch=OffsetAndEpoch[offset=3, epoch=3])",
             exception.getMessage()
         );
 
