@@ -74,13 +74,14 @@ import org.apache.kafka.snapshot.Snapshots;
 import org.apache.kafka.test.TestCondition;
 import org.apache.kafka.test.TestUtils;
 
+import org.mockito.Mockito;
+
 import java.io.ByteArrayOutputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -130,6 +131,7 @@ public final class RaftClientTestContext {
     public final KRaftVersion kraftVersion;
     public final KafkaRaftClient<String> client;
     final Metrics metrics;
+    public final ExternalKRaftMetrics externalKRaftMetrics;
     public final MockLog log;
     final MockNetworkChannel channel;
     final MockMessageQueue messageQueue;
@@ -377,7 +379,7 @@ public final class RaftClientTestContext {
             Metrics metrics = new Metrics(time);
             MockNetworkChannel channel = new MockNetworkChannel();
             MockListener listener = new MockListener(localId);
-            Map<Integer, InetSocketAddress> staticVoterAddressMap = Collections.emptyMap();
+            Map<Integer, InetSocketAddress> staticVoterAddressMap = Map.of();
             if (isStartingVotersStatic) {
                 staticVoterAddressMap = startingVoters
                     .voterNodes(startingVoters.voterIds().stream(), channel.listenerName())
@@ -412,7 +414,7 @@ public final class RaftClientTestContext {
 
             List<InetSocketAddress> computedBootstrapServers = bootstrapServers.orElseGet(() -> {
                 if (isStartingVotersStatic) {
-                    return Collections.emptyList();
+                    return List.of();
                 } else {
                     return startingVoters
                         .voterNodes(startingVoters.voterIds().stream(), channel.listenerName())
@@ -443,11 +445,14 @@ public final class RaftClientTestContext {
                 quorumConfig
             );
 
+            ExternalKRaftMetrics externalKRaftMetrics = Mockito.mock(ExternalKRaftMetrics.class);
+
             client.register(listener);
             client.initialize(
                 staticVoterAddressMap,
                 quorumStateStore,
-                metrics
+                metrics,
+                externalKRaftMetrics
             );
 
             RaftClientTestContext context = new RaftClientTestContext(
@@ -470,6 +475,7 @@ public final class RaftClientTestContext {
                 raftProtocol,
                 alwaysFlush,
                 metrics,
+                externalKRaftMetrics,
                 listener
             );
 
@@ -498,6 +504,7 @@ public final class RaftClientTestContext {
         RaftProtocol raftProtocol,
         boolean alwaysFlush,
         Metrics metrics,
+        ExternalKRaftMetrics externalKRaftMetrics,
         MockListener listener
     ) {
         this.clusterId = clusterId;
@@ -515,6 +522,7 @@ public final class RaftClientTestContext {
         this.raftProtocol = raftProtocol;
         this.alwaysFlush = alwaysFlush;
         this.metrics = metrics;
+        this.externalKRaftMetrics = externalKRaftMetrics;
         this.listener = listener;
     }
 
@@ -721,7 +729,7 @@ public final class RaftClientTestContext {
 
     // Voters are only written to ElectionState in KRaftVersion 0
     private Set<Integer> expectedVoters() {
-        return kraftVersion.isReconfigSupported() ? Collections.emptySet() : startingVoters.voterIds();
+        return kraftVersion.isReconfigSupported() ? Set.of() : startingVoters.voterIds();
     }
 
     DescribeQuorumResponseData collectDescribeQuorumResponse() {
@@ -860,8 +868,7 @@ public final class RaftClientTestContext {
     ) {
         List<RaftRequest.Outbound> voteRequests = new ArrayList<>();
         for (RaftRequest.Outbound raftMessage : channel.drainSendQueue()) {
-            if (raftMessage.data() instanceof VoteRequestData) {
-                VoteRequestData request = (VoteRequestData) raftMessage.data();
+            if (raftMessage.data() instanceof VoteRequestData request) {
                 VoteRequestData.PartitionData partitionRequest = unwrap(request);
 
                 assertTrue(partitionRequest.preVote());
@@ -1031,7 +1038,7 @@ public final class RaftClientTestContext {
     RaftRequest.Outbound assertSentEndQuorumEpochRequest(int epoch, int destinationId) {
         List<RaftRequest.Outbound> endQuorumRequests = collectEndQuorumRequests(
             epoch,
-            Collections.singleton(destinationId),
+            Set.of(destinationId),
             Optional.empty()
         );
         assertEquals(1, endQuorumRequests.size());
@@ -1311,7 +1318,7 @@ public final class RaftClientTestContext {
             int id = updateVoterResponse.currentLeader().leaderId();
             Endpoints expectedLeaderEndpoints = startingVoters.listeners(id);
             Endpoints responseEndpoints = Endpoints.fromInetSocketAddresses(
-                Collections.singletonMap(
+                Map.of(
                     channel.listenerName(),
                     InetSocketAddress.createUnresolved(
                         updateVoterResponse.currentLeader().host(),
@@ -1802,6 +1809,8 @@ public final class RaftClientTestContext {
                 partitionData.divergingEpoch()
                     .setEpoch(divergingEpoch)
                     .setEndOffset(divergingEpochEndOffset);
+
+                partitionData.setRecords(MemoryRecords.EMPTY);
             }
         );
     }
@@ -1830,6 +1839,8 @@ public final class RaftClientTestContext {
                 partitionData.snapshotId()
                     .setEpoch(snapshotId.epoch())
                     .setEndOffset(snapshotId.offset());
+
+                partitionData.setRecords(MemoryRecords.EMPTY);
             }
         );
     }
