@@ -24,6 +24,7 @@ import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.ApiMessage;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.protocol.MessageUtil;
+import org.apache.kafka.common.protocol.Readable;
 import org.apache.kafka.common.requests.AbstractRequest;
 import org.apache.kafka.common.requests.AbstractResponse;
 
@@ -36,7 +37,6 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -60,17 +60,16 @@ public class RequestConvertToJsonTest {
                 } else {
                     message = ApiMessageType.fromApiKey(key.id).newRequest();
                 }
-                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
+                Readable bytes = MessageUtil.toByteBufferAccessor(message, version);
                 AbstractRequest req = AbstractRequest.parseRequest(key, version, bytes).request;
                 try {
                     RequestConvertToJson.request(req);
                 } catch (IllegalStateException e) {
-                    e.printStackTrace();
                     unhandledKeys.add(key.toString());
                 }
             }
         }
-        assertEquals(Collections.emptyList(), unhandledKeys, "Unhandled request keys");
+        assertEquals(List.of(), unhandledKeys, "Unhandled request keys");
     }
 
     @Test
@@ -88,7 +87,7 @@ public class RequestConvertToJsonTest {
                     message = ApiMessageType.fromApiKey(key.id).newResponse();
                 }
 
-                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
+                ByteBuffer bytes = MessageUtil.toByteBufferAccessor(message, version).buffer();
                 AbstractResponse response = AbstractResponse.parseResponse(key, bytes, version);
                 try {
                     RequestConvertToJson.response(response, version);
@@ -107,7 +106,7 @@ public class RequestConvertToJsonTest {
             if (key.hasValidVersion()) {
                 short version = key.latestVersion();
                 ApiMessage message = ApiMessageType.fromApiKey(key.id).newResponse();
-                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
+                ByteBuffer bytes = MessageUtil.toByteBufferAccessor(message, version).buffer();
                 AbstractResponse res = AbstractResponse.parseResponse(key, bytes, version);
                 try {
                     RequestConvertToJson.response(res, version);
@@ -116,7 +115,7 @@ public class RequestConvertToJsonTest {
                 }
             }
         }
-        assertEquals(Collections.emptyList(), unhandledKeys, "Unhandled response keys");
+        assertEquals(List.of(), unhandledKeys, "Unhandled response keys");
     }
 
     @Test
